2006-11-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Templates/UIxSortableTableHeader.wox: all the events are
	declared from the javascript DOM onload handlers.

	* UI/Templates/UIxPageFrame.wox: load the new SOGoDragHandles.js
	library.

	* UI/Templates/MailerUI/UIxMailListView.wox: all the events are
	declared from the javascript DOM onload handlers.

	* UI/MailerUI/UIxMailListView.m: removed all the JS methods since
	we want everything to be separated from each other, as much as
	possible.

	* UI/WebServerResources/SOGoDragHandles.js: new module containing
	the "SOGoDragHandlesInterface", implementing methods that can be
	attributed to DIV so that they can be used as drag handles.

	* SoObjects/Mailer/SOGoDraftObject.m ([NSString
	-asQPSubjectString]): initialize the tmp strings with '0' to make
	sure they don't contain garbage.

2006-11-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/MailerUI.js: register the messageList
	table as a dragging source and the leaf of the navigation tree as
	dnd destinations to the DNDManager.

	* UI/WebServerResources/generic.js: initialize tabs from the
	"unload" event listener that is added programmatically instead of
	from the template... Also, added the new DNDManager object.

	* UI/WebServerResources/HTMLTableElement.js: added code to
	simulate XUL drag n drop events. This code will possibly be moved
	to HTMLElement.js instead later...

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder -_qualifierForFilter:filter]): same as
	below.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-_qualifierForFilter:filter]): only search records which starts
	with the specified pattern.

2006-11-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m ([NSString
	-asQPSubjectString]): new method that returns the special QP
	string with its qp declaration for email subjects.
	([SOGoDraftObject -bodyPartForText]) 